--- a/src/app/components/academy-overview/academy-overview.component.html
+++ b/src/app/components/academy-overview/academy-overview.component.html
@@ -95,7 +95,7 @@
       <div class="feature-card">📈 Skill-building opportunities</div>
       <div class="feature-card">🎯 Portfolio and CV support</div>
     </div>
-    <button routerLink="/omnipurse-internships" class="cta-button">Visit Our Interships</button>
+    <button routerLink="/omnipurse-internships" class="cta-button">Visit Our Internships</button>
   </div>
   <div class="image-content">
     <img src="assets/iMG/internship1.jpg" alt="Internship Program">
