--- a/src/app/components/consultation/consultation.component.html
+++ b/src/app/components/consultation/consultation.component.html
@@ -14,9 +14,11 @@
 
 <!-- Image & Text Section -->
 <section class="info-section bookSection">
+  
   <div class="image-side">
-    <img
-      src="../../../assets/iMG/pexels-shvetsa-4226256.jpg"
+    <img 
+      
+      src="../../../assets/iMG/consultation2.png"
       alt="Consultation"
     />
   </div>
