--- a/src/app/components/academy-overview/academy-overview.component.html
+++ b/src/app/components/academy-overview/academy-overview.component.html
@@ -1,5 +1,8 @@
-<!-- academy.component.html -->
-<section class="academy-hero">
+<section class="hero-section">
+  <header>
+      <app-website-head-menu></app-website-head-menu>
+    </header>
+    <div class="background-blur"></div>
   <div class="hero-content">
     <h1>Tech Academy, Trainings & Internships</h1>
     <p style="color:#DAA520">Get real-world experience, practical skills, and industry certifications that accelerate your tech career.</p>
@@ -101,8 +104,6 @@
     <img src="assets/iMG/internship1.jpg" alt="Internship Program">
   </div>
 </section>
-
-
 <section id="programs" class="academy-programs">
   <h2>Our Programs</h2>
   <div class="program-grid">
@@ -113,5 +114,8 @@
     </div>
   </div>
 </section>
+<footer>
+  <app-website-footer-menu></app-website-footer-menu>
+</footer>
 
 
