--- a/src/app/components/consultation/consultation.component.html
+++ b/src/app/components/consultation/consultation.component.html
@@ -205,16 +205,6 @@
   <p>Start a live chat with our team.</p>
 </section>
 
-<!-- Footer Section -->
-<footer class="contact-footer">
-  <div class="footer-content">
-    <h4>Omnipurse Limited</h4>
-    <p>8 Emmanuel Ajasa Street, Lafenwa, Ado-Odo Ota, Ogun, Nigeria</p>
-    <p>
-      Email:
-      <a href="mailto:omnipurse.ltd@gmail.com">omnipurse.ltd@gmail.com</a>
-    </p>
-    <p>Phone: <a href="tel:+2349128510854">+2349128510854</a></p>
-    <p>Hours: Monday – Friday (9:00 – 17:00)</p>
-  </div>
+<footer>
+  <app-website-footer-menu></app-website-footer-menu>
 </footer>
