--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -297,6 +297,6 @@
 </section>
 
 <!-- Footer -->
-<footer class="footer">
-  <p>&copy; 2025 Omnipurse Ltd. All rights reserved.</p>
+<footer>
+  <app-website-footer-menu></app-website-footer-menu>
 </footer>
