--- a/src/app/components/omnipurse-academy/omnipurse-academy.component.html
+++ b/src/app/components/omnipurse-academy/omnipurse-academy.component.html
@@ -1,6 +1,7 @@
-
-
 <section class="academy-banner">
+  <header>
+      <app-website-head-menu></app-website-head-menu>
+    </header>
   <div class="banner-content">
     <div class="tagline">
       <span class="tag-icon">Omnipurse Academy</span>
