--- a/src/app/components/omnipurse-trainings/omnipurse-trainings.component.html
+++ b/src/app/components/omnipurse-trainings/omnipurse-trainings.component.html
@@ -1,4 +1,7 @@
 <section class="omnipurse-hero-banner">
+  <header>
+      <app-website-head-menu></app-website-head-menu>
+    </header>
   <div class="omnipurse-hero-overlay">
     <div class="omnipurse-hero-content">
       <!-- Left Text Content -->
