--- a/src/app/modules/services/ai-and-iot-innovations/ai-and-iot-innovations.component.html
+++ b/src/app/modules/services/ai-and-iot-innovations/ai-and-iot-innovations.component.html
@@ -108,4 +108,7 @@
     </div>
     </div>
   </div>
-</section>
+ 
+</section> <footer>
+  <app-website-footer-menu></app-website-footer-menu>
+</footer>
