--- a/src/app/modules/services/services-overview/services-overview.component.html
+++ b/src/app/modules/services/services-overview/services-overview.component.html
@@ -1,10 +1,9 @@
-<header>
-  <app-website-head-menu></app-website-head-menu>
-</header>
-
 <div class="page-wrapper">
-  <!-- Hero Section -->
-  <section class="hero">
+  <section class="hero-section">
+    <header>
+      <app-website-head-menu></app-website-head-menu>
+    </header>
+    <div class="background-blur"></div>
     <div class="hero-content">
       <h1>Empowering Your Vision</h1>
       <p>
@@ -66,39 +65,7 @@
       </div>
     </div>
   </section>
-
-  <!-- CTA Section -->
-  <section class="cta">
-    <h2>Let’s Build Something Great</h2>
-    <p>
-      Reach out now to schedule a consultation or learn more about our
-      solutions.
-    </p>
-  </section>
-
-  <section class="contact-info">
-    <div class="info-card">
-      <i class="icon location"></i>
-      <h3>Our Main Office</h3>
-      <p>
-       8 Emmanuel Ajasa street, Lafenwa,<br />Ado-odo ota, Ogun
-      </p>
-    </div>
-    <div class="info-card">
-      <i class="icon phone"></i>
-      <h3>Phone Number</h3>
-      <p>+234-912-851-0854<br />888-0123-4567 (Toll Free)</p>
-    </div>
-    <div class="info-card">
-      <i class="icon fax"></i>
-      <h3>Fax</h3>
-      <p>+234-912-851-0854</p>
-    </div>
-    <div class="info-card">
-      <i class="icon email"></i>
-      <h3>Email</h3>
-      <p><a href="mailto:omnipurse.ltd@gmail.com">omnipurse.ltd@gmail.com</a></p>
-    </div>
-    <a routerLink="/contact-us" class="btn secondary">Contact Us</a>
-  </section>
 </div>
+<footer>
+  <app-website-footer-menu></app-website-footer-menu>
+</footer>
