--- a/src/app/modules/services/software-solutions/software-solutions.component.html
+++ b/src/app/modules/services/software-solutions/software-solutions.component.html
@@ -239,16 +239,22 @@
   <div class="icon-container">
     <img src="assets/ICON/phone.svg" alt="Phone Icon" />
   </div>
+
   <div class="content">
     <h2>Let's Get Started</h2>
     <p>
-      Have a project or partnership in mind? <br />Contact us today for a free
-      consultation.
+      Have a project or partnership in mind? <br />
+      Contact us today for a free consultation.
     </p>
   </div>
-  <div>
+
+  <div class="button-container">
     <button class="contact-button" routerLink="/contact-us">
       Contact Us Now
     </button>
   </div>
 </div>
+
+<footer>
+  <app-website-footer-menu></app-website-footer-menu>
+</footer>
