--- a/src/app/components/academy-overview/academy-overview.component.css
+++ b/src/app/components/academy-overview/academy-overview.component.css
@@ -7,20 +7,44 @@
 }
 
 /* Hero Section */
-.academy-hero {
-  background: linear-gradient(rgba(0, 39, 79, 0.8), rgba(0, 39, 79, 0.8)), url('/assets/academy-banner.jpg') no-repeat center/cover;
-  color: white;
+.hero-section {
+  position: relative;
+  background: url("./../../../assets/iMG/Tech-Academy-Trainings-&-Internships.jpg")
+    no-repeat center center/cover;
+  height: 100vh;
+  display: flex;
   text-align: center;
-  padding: 100px 20px;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.background-blur {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(4px);
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 0;
+}
+
+.hero-content {
+  position: relative;
+  z-index: 1;
+  text-align: center;
 }
 
 .hero-content h1 {
-  font-size: 3em;
+  color: var(--white);
+  font-weight: 500;
+  font-size: 3rem;
   margin-bottom: 15px;
 }
 
 .hero-content p {
-  font-size: 1.2em;
+  font-size: 1.2rem;
   max-width: 700px;
   margin: 0 auto 30px;
 }
