--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -149,12 +149,11 @@
               </mat-form-field>
 
               <!-- SUBMIT BUTTON -->
-              <div class="primarybtn" style="text-align: right; margin-top: 20px">
-                <button
-                  type="submit"
-                  mat-raised-button
-                  [disabled]="isBusy"
-                >
+              <div
+                class="primarybtn"
+                style="text-align: right; margin-top: 20px"
+              >
+                <button type="submit" mat-raised-button [disabled]="isBusy">
                   <mat-progress-spinner
                     *ngIf="isBusy"
                     diameter="20"
@@ -172,71 +171,6 @@
     </div>
   </div>
 </div>
-<section class="footer">
-  <div class="contact-access-pane">
-    <div class="contact-item">
-      <div class="icon address-icon"></div>
-      <h4>ADDRESS</h4>
-      <p>
-        The first gate,<br />
-        8 Emmanuel Ajasa street, Lafenwa,<br />
-        Ado-odo ota, Ogun
-      </p>
-    </div>
-
-    <div class="contact-item">
-      <div class="icon phone-icon"></div>
-      <h4>PHONES</h4>
-      <p>Phone: <a href="tel:+2349128510854">+234-912-851-0854</a></p>
-    </div>
-
-    <div class="contact-item">
-      <div class="icon email-icon"></div>
-      <h4>CONTACTS</h4>
-      <p><a href="mailto:omnipurse.ltd@gmai.com">omnipurse.ltd@gmail.com</a></p>
-    </div>
-
-    <div class="contact-item">
-      <div class="icon hours-icon"></div>
-      <h4>WORKING HOURS</h4>
-      <p>Monday–Friday<br />(9:00 – 17:00)</p>
-    </div>
-  </div>
-
-  <div class="connect-pane">
-    <h2>CONNECT WITH US</h2>
-    <div class="social-icons">
-      <a
-        href="#"
-        class="social twitter"
-        aria-label="Twitter"
-        target="_blank"
-      ></a>
-      <a
-        href="#"
-        class="social facebook"
-        aria-label="Facebook"
-        target="_blank"
-      ></a>
-      <a
-        href="#"
-        class="social instagram"
-        aria-label="Instagram"
-        target="_blank"
-      ></a>
-      <a
-        href="#"
-        class="social whatsapp"
-        aria-label="WhatsApp"
-        target="_blank"
-      ></a>
-      <a
-        href="#"
-        class="social youtube"
-        aria-label="YouTube"
-        target="_blank"
-      ></a>
-      <a href="#" class="social tiktok" aria-label="TikTok" target="_blank"></a>
-    </div>
-  </div>
-</section>
+<footer>
+  <app-website-footer-menu></app-website-footer-menu>
+</footer>
