--- a/src/app/modules/services/ai-and-iot-innovations/ai-and-iot-innovations.component.css
+++ b/src/app/modules/services/ai-and-iot-innovations/ai-and-iot-innovations.component.css
@@ -8,7 +8,7 @@
   justify-content: center;
   color: var(--white);
   text-align: center;
-   z-index: 1; 
+   overflow: hidden;
 }
 
 .hero-section .overlay {
@@ -20,12 +20,6 @@
   position: absolute;
   inset: 0;
   background: rgba(0, 0, 0, 0.6);
-}
-
-/* Ensure content is above the overlay */
-.hero-section > * {
-  position: relative;
-  z-index: 1;
 }
 
 .hero-section h1 {
